# minionlab-mcp-demo-x

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.mjs  package-lock.json  package.json  tsconfig.json
patches/: @modelcontextprotocol+inspector+0.4.1.patch
solana-contract/: Cargo.toml  README.md
solana-contract/src/: lib.rs
src/: index.ts
src/playwright/: playwright.ts  x-act.ts
test/: test-mcp-sse.mjs
